# OfficeOS

./: .env.example  .gitignore  .prettierrc  AGENTS.md  BrandIdentity.md  Demo.md  HackathonIdeasAndStrategy.md  HackathonLogistics.md  OfficeOsPitch.md  Pitch.md  PostMortem.md  README.md  Scoring.md  docker-compose.infrastructure.yaml  docker-compose.yml  package.json
.agents/skills/api-layer/: SKILL.md
Backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_initial.py  0002_password_auth.py
Backend/app/: __init__.py  auth.py  config.py  db.py  email_service.py  main.py  mock_ai.py  models.py  routes_admin.py  routes_auth.py  routes_files.py  routes_requests.py  routes_workspaces.py  schemas.py  storage.py
Dashboard/: .dockerignore  Dockerfile  next.config.ts
Dashboard/templates/: ChangeRequest.md  SPEC-v1.0.md  SPEC-v1.1.md  SPEC.md
Demo/: Demo.md  package.json
Demo/templates/: ChangeRequest.md  DESIGN.md  SPEC.md  UpdateReport-v1.0.md  UpdateReport-v1.1.md  UpdateReport.md
Slides/: package.json
Website/: eslint.config.mjs  package.json
Website/templates/: DESIGN.md
officeos-startup-positioning/: PROGRESS.md  competitive-alternatives.md  intake.md  market-category-analysis.md  messaging-implications.md  positioning-doc.md  positioning-statement.md  verification-report.md
officeos-startup-positioning/raw/: alternative-mapping.md  customer-intelligence.md  market-categories.md  trends-timing.md
officeos-update-wedge/: PROGRESS.md
officeos-update-wedge/00-intake/: brief.md
(+245 files in other folders)
