[project]
name = "officeos-backend"
version = "0.1.0"
description = "Pilot backend for OfficeOS request coordination."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "boto3>=1.35.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.2.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
